--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+
+	<a href="/">Home</a>
+	<a href="/about/">About</a>
+	<a href="/blog/">Blog</a>
+
 	<h1>My Astro Site</h1>
 </body>
 
